# twitter-scraper

./: Cargo.toml  README.md  twitter-scraper.toml
src/: auth.rs  config.rs  main.rs  options.rs  pp.rs  scraper.rs  types.rs
src/types/: profile.rs  timeline.rs  tweets.rs
src/types/timeline/: search.rs  v1.rs  v2.rs
